URL prameter encoding/decoding added (#234)
* Updated how EI extracts url params, and now accepts JMESPATH
* Updated notificationMeta validation